Fix: Change background color and text wieght to increase visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ body {
   text-align: center;
   color: #3c1053;
   font-family: Montserrat, sans-serif;
+  font-weight: 500;
 }
 
 /* Header */
@@ -92,8 +93,8 @@ main {
   justify-content: center;
   border-radius: 40px;
   margin: 60px 10px;
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(5px);
+  background: rgba(255, 255, 255, 0.68);
+  backdrop-filter: blur(200px);
   color: #000000;
   font-size: 1.5rem;
   padding-top: 180px;
@@ -110,8 +111,8 @@ main {
   flex-direction: column;
   border-radius: 40px;
   margin: 60px 10px;
-  background: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(5px);
+  background: rgba(240, 4, 217, 0.491);
+  backdrop-filter: blur(50px);
   color: black;
 }
 
@@ -138,7 +139,7 @@ main {
   border-radius: 40px;
   margin: 60px 10px;
   background: #c8ffc826;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(50px);
   color: black;
 }
 
@@ -163,7 +164,7 @@ iframe {
   border-radius: 40px;
   margin: 60px 10px;
   background: #c8c8ff26;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(50px);
   cursor: pointer;
   color: black;
 }
